--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <!--  <h3 style="text-align:right"><a href="demo.htm" title="Click  for Demo"><b>Click for Demo</b></a></h3>  -->    
      <div class="col">
         <h2>About Energy Texting</h2> 
-        <b>Energy Texting</b> is a customer acquisition and relationship messaging service that allows people to interact with their local utility company using text messaging. The service enables 2 way SMS/MMS chats and notification services through the use of mobile short codes. Consumers can use it to receive alerts, promotions, notifications, reminders, tutorials, support, data collection, 2FA, picture collection as well as providing written consent to be contacted. </p>
+        <b>Energy Texting</b> is a customer acquisition and relationship messaging service that allows people to interact with their local utility company using text messaging. The service enables SMS/MMS messaging and notification services through the use of mobile short codes. Consumers can use it to receive alerts, promotions, notifications, reminders, tutorials, support, data collection, 2FA, picture collection as well as providing written consent to be contacted. </p>
       </div>
       <div class="col" id="tc">
         <h2>Terms and Conditions</h2>
